--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>My First Cloud Deployment</h1>
 <h2>Hello, my name is GENARO A. BRAGAIS JR</h2>
-<img src="" width="200"/>
+<img src="images/qweqweqwe.jpg" width="200"/>
   <p>This is my first deployed website!</p>
 
 </body>
